welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:14: error: not found: value getMondeLongueur
    if(getX() == getMondeLongueur -1){
                 ^